--- a/reviews-react/src/Styles/_defaultStyle.scss
+++ b/reviews-react/src/Styles/_defaultStyle.scss
@@ -1,3 +1,7 @@
 $primary-color: #6CB4EE;
 $primary-hover: #0066b2;
 $review-background: #FFFFFF;
+$page-background: #f8f4fc;
+$box-shadow: rgba(0, 0, 0, .05);
+$random-btn-background: #D2E8F9;
+$text-color: #808080;
